k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-risk-api
  labels:
    app: member-risk-api
spec:
  selector:
    app: member-risk-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
  sessionAffinity: None
